# oden

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.oden-runtime.example.yml  docker-compose.yml  ideas.md  pyproject.toml  s7_watcher.spec
.cursor/rules/: git-workflow.mdc
.github/workflows/: python-test.yml  release.yml
docs/: FEATURES.md  NEW_FEATURES.md  REPORT_TEMPLATE.md  SETUP_GUIDE_WINDOWS.md  WEB_GUI.md  WINDOWS_NATIVE_PLAN.md  WINDOWS_SETUP.md  nativeWindows.md
oden/: app_state.py  attachment_handler.py  bundle_utils.py  config.py  config_db.py  formatting.py  location_parser.py  path_utils.py  processing.py  responses_db.py  s7_watcher.py  signal_linker.py  signal_listener.py  signal_manager.py  signal_registrar.py  tray.py  web_server.py
oden/templates/web/: base.html  dashboard.html  macros.html  setup.html
oden/templates/web/css/: base.css  dashboard.css
oden/templates/web/includes/: logo_data_uri.html
oden/templates/web/js/: setup.js
oden/web_handlers/: __init__.py  _helpers.py  account_handlers.py  config_handlers.py  contact_handlers.py  group_handlers.py  response_handlers.py  setup_handlers.py  template_handlers.py
scripts/: build_universal_dmg.sh  install_mac.sh  run_mac.sh  uninstall_mac.sh
templates/: report.md.j2
tests/: test_bundle_utils.py  test_config_db.py  test_formatting.py  test_location_parser.py  test_path_utils.py  test_processing.py  test_s7_watcher.py  test_security.py  test_web_api.py  test_web_config.py  test_web_crud.py  test_web_gui.py
tests/fixtures/: gui_sample_data.json
(+18 files in other folders)
